Fix z-index of Front Class

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1857,5 +1857,5 @@ button.planetButton {
 }
 
 .front {
-    z-index: 13;
+    z-index: 30;
 }
